--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/FalconXYX/First-Typescript-Project#readme",
   "dependencies": {
+    "angular": "^1.8.3",
     "eslint-plugin-shopify": "^35.1.0"
   }
 }
